public/assets/css/entitieslist.css
/* ... */
/**/
/* [data-bs-theme='light'] .file-container */
/* [data-bs-theme='dark'] .file-container { */
/*   border-style: solid; */
/* } */

[data-bs-theme='dark'] .file-container {
  border-style: solid;
}

[data-bs-theme='dark'] .items-card-text.editable {
  color: #333;
}

/*-----------------------------------------------
|  class extensions / utility classes
-----------------------------------------------*/
.d-contents {
  display: contents !important;
}

/*-----------------------------------------------
|   Page Wrapper, left vertical Navbar, and triggers
-----------------------------------------------*/

/* Media Queries ----------------------------- */

/* isolating mobile/tablet media queries
with laptop/desktop media queries is necessary in order to not have
a conflict with specificity as mobile/tablet queries will
naturally have a higher one because of the navbar change in
layout(float) and is being dependent on top level input(#toggle-navbar) state */

/* Mobile/tablet */
@media (max-width: 991px) {
  .page-wrapper {
    display: grid;
    height: 100dvh;
    grid-template-columns: 1fr 0;
    transition: grid-template-columns 0.2s ease-in-out;
  }

  .page-wrapper > .main {
    overflow-y: auto;
  }

  /* mobile left navbar layout starts here */
  .page-wrapper > .left-nav-bar {
    height: fit-content;
    max-width: var(--left-nav-width);
    bottom: 0.5rem;
    right: 0.25rem;
    z-index: 1016;
    transition: transform 0.1s linear;
    border-radius: 8px;
  }

  .left-nav-bar ul {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: end;
    width: 100%;
    height: fit-content;
    gap: 0.5rem;
    list-style: none;
    padding: 0.5rem 0.3rem 0;
    margin-bottom: 0.5rem;
    overflow: hidden;
    transition: gap 0.2s ease-in-out;
  }

  .left-nav-bar ul li {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 0.5rem !important;
    font-weight: bold;
    min-height: 45px;
    width: 100%;
    border-radius: 6px;
    transition-property: min-height, max-height, transform, opacity;
    transition-timing-function: ease-in-out;
    transition-duration: 0.2s;
  }

  .left-nav-bar ul li button,
  .left-nav-bar ul li label {
    display: flex;
    color: rgba(var(--falcon-link-color-rgb), 1);
    background: inherit;
    border-radius: inherit;
    border: inherit;
    flex-direction: column;
    list-style: none;
    text-decoration: none;
    align-items: center;
    justify-content: center;
    padding: 0.3rem 1rem;
    gap: 0.3rem;
    width: 100%;
  }

  .left-nav-bar ul li label {
    margin: 0;
    z-index: 1;
  }

  .left-nav-bar ul li label > svg {
    transition: transform 0.2s ease-in-out;
  }

  /*mobile  left navbar layout ends here */

  /* mobile animation for left content starts here */

  .navbar-toggle.nav-n-content ~ .page-wrapper {
    grid-template-columns: 0 1fr;
  }

  /* mobile animation left content ends here */

  /*mobile  left sidebar layout starts here */

  .left-sidebar-container {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    /* overflow: hidden; */
    overflow-y: auto;
    max-width: 100%;
    max-height: 100%;
    width: 100%;
    height: 100%;
  }

  .left-sidebar-container .price-article,
  .left-sidebar-container .calendar-article,
  .left-sidebar-container .inbox-article,
  .left-sidebar-container .settings-article,
  .left-sidebar-container .customize-article {
    grid-area: 1/1;
    z-index: 1;
    max-width: 100%;
    width: 100%;
    height: 100%;
  }

  .left-sidebar-container .price-article {
    z-index: 2;
  }
  /* mobile left sidebar layout ends here */

  /* mobile animation for left nav bar starts here */
  /* open state */
  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar,
  .navbar-toggle.nav-only ~ .page-wrapper > .left-nav-bar {
    transform: translateX(0);
    transition-delay: 0s;
  }

  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar ul,
  .navbar-toggle.nav-only ~ .page-wrapper > .left-nav-bar ul {
    gap: 0.5rem;

    transition-delay: 0.11s;
  }

  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar ul li:not(:last-child),
  .navbar-toggle.nav-only ~ .page-wrapper > .left-nav-bar ul li:not(:last-child) {
    transform: translateY(0);
    opacity: 1;
    max-height: 100%;
    min-height: 45px;
    overflow: hidden;

    transition-delay: 0.11s;
  }

  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar > ul li > label > svg,
  .navbar-toggle.nav-only ~ .page-wrapper > .left-nav-bar > ul li > label > svg {
    transform: rotate(360deg);
  }

  /* close state */
  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse,
  .navbar-toggle ~ .page-wrapper > .left-nav-bar {
    transform: translateX(1.5rem);
    transition-delay: 0.21s;
  }

  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse ul,
  .navbar-toggle ~ .page-wrapper > .left-nav-bar ul {
    gap: 0;
    transition-delay: 0s;
  }

  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse ul li:not(:last-child),
  .navbar-toggle ~ .page-wrapper > .left-nav-bar ul li:not(:last-child) {
    transform: translateY(20px);
    opacity: 0;
    max-height: 0;
    min-height: 0;
    overflow: hidden;
    transition-delay: 0s;
  }

  .navbar-toggle.nav-n-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse > ul li > label > svg,
  .navbar-toggle ~ .page-wrapper > .left-nav-bar > ul li > label > svg {
    transform: rotate(180deg);
  }

  /* mobile animation for left nav bar ends here */
}
/* ... */

